corrected repo link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-crypto",
-  "homepage": "http://natarake.github.io/react-crypto",
+  "homepage": "http://natarake.github.io/react-cryptochasers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
